// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
Array [
  <ul
    className="css-ckmwo8-TabsContainerStyle ercic662"
  >
    <li
      className="is-active css-y9jj0p-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      ALL
    </li>
    <li
      className=" css-y9jj0p-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      GET BUILDING
    </li>
    <li
      className=" css-y9jj0p-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      PREREQUISITES
    </li>
    <li
      className=" css-y9jj0p-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      FEATURES
    </li>
  </ul>,
  <div
    className="css-18difvw-SelectWrapper ercic660"
  >
    <div
      className=" css-k377xg-container"
      onKeyDown={[Function]}
    >
      <div
        className=" css-1qsurod-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-15ikjri-ValueContainer"
        >
          <div
            className=" css-1me8bqy-singleValue"
          >
            ALL
          </div>
          <input
            aria-autocomplete="list"
            className="css-62g3xt-dummyInput"
            disabled={false}
            id="react-select-2-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            tabIndex="0"
            value=""
          />
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            className=" css-43ykx9-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            className=" css-unjupu-indicatorContainer"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <img
              alt=""
              className=" css-vfym8x-StyledDefaultDropdownIcon evf7wlc2"
              src="test-image-stub"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`sidebar 1`] = `
Array [
  <ul
    className="sidebar css-ckmwo8-TabsContainerStyle ercic662"
  >
    <li
      className="sidebar is-active css-y9jj0p-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      ALL
    </li>
    <li
      className="sidebar css-y9jj0p-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      GET BUILDING
    </li>
    <li
      className="sidebar css-y9jj0p-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      PREREQUISITES
    </li>
    <li
      className="sidebar css-y9jj0p-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      FEATURES
    </li>
  </ul>,
  <div
    className="sidebar css-18difvw-SelectWrapper ercic660"
  >
    <div
      className=" css-k377xg-container"
      onKeyDown={[Function]}
    >
      <div
        className=" css-1qsurod-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-15ikjri-ValueContainer"
        >
          <div
            className=" css-1me8bqy-singleValue"
          >
            ALL
          </div>
          <input
            aria-autocomplete="list"
            className="css-62g3xt-dummyInput"
            disabled={false}
            id="react-select-3-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            tabIndex="0"
            value=""
          />
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            className=" css-43ykx9-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            className=" css-unjupu-indicatorContainer"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <img
              alt=""
              className=" css-vfym8x-StyledDefaultDropdownIcon evf7wlc2"
              src="test-image-stub"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
